hphp/hack/test/typecheck/let/let_foreach_kv_2.php.exp
File "let_foreach_kv_2.php", line 9, characters 8-8:
Unbound name: k (a global constant) (Naming[2049])
